sample-workload/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-ecommerce-app-service
  namespace: default
  labels:
    app: sample-ecommerce-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: sample-ecommerce-app
